--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ body
 				{
 					background-color: rgb(188, 188, 255);
 					padding: 0.5%;
-					text-align: center;
 					text-indent: 50px;
 					font-weight: bold;
 					font-family: Arial;
@@ -53,8 +52,10 @@ body
 					float: left;
 					margin-right: 0.5%;
 					padding: 0.5%;
-					height: 100px;
+					height: 220px;
 					padding-top: 20px;
+					font-weight: bold;
+					font-family: Arial;
 				}
 				#div_tools
 				{
@@ -62,7 +63,7 @@ body
 					width: 48.75%;
 					float: left;
 					padding: 0.5%;
-					height: 100px;
+					height: 220px;
 					padding-top: 20px;
 				}
 		#div_canvas
