--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body
 }
 	#div_container
 	{
-		/*background-color: rgb(30, 255, 0);*/
 		width: min-content;
 		margin-left: auto;
 		margin-right: auto;
@@ -66,10 +65,10 @@ body
 					height: 220px;
 					padding-top: 20px;
 				}
-		#div_canvas
+		/*#div_canvas
 		{
 			
-		}
+		}*/
 #button_image, #button_start_stop, #button_undo, #button_redo
 {
 	margin: 5px;
